# aistock

./: .gitignore  README.md  progress.md  pyproject.toml  sprint1_plan.md  sprint2_plan.md  sprint3_plan.md  sprint4_plan.md  task_plan.md
.claude/: settings.local.json
artifacts/adr/: 001-plugin-pipeline-architecture.md
artifacts/changelogs/: 2026-05-24-dataflow-review-fixes.md  2026-05-24-gap-closure.md  2026-05-24-second-review-fixes.md  2026-05-24-spec-review-fixes.md  2026-05-24-third-review-fixes.md  2026-05-24-verification-strategy.md
artifacts/plans/: 2026-05-24-data-pipeline.md
artifacts/specs/: data-pipeline-design.md
config/: instruments.yaml  pipeline.yaml  source_priority.yaml
docs/: ARCHIVE_STATUS.md  CODE_REVIEW.md  DATA_SOURCES.md  DESIGN_REVIEW.md  EVALUATION_ISSUE7.md  FACTORS.md  FUNCTIONALITY.md  LESSON_LEARNED.md  PHASE2_DESIGN_REVIEW.md  PHASE2_TEST_REPORT.md  PHASE3_DESIGN_REVIEW.md  PHASE3_DEVELOPMENT_PLAN.md  PROJECT_SUMMARY.md  TEST_REPORT.md
docs/sprints/: README.md  sprint-01-validation-rules.md  sprint-02-record-linkage.md  sprint-03-diff-detection.md  sprint-04-conflict-resolution.md  sprint-05-reporting-monitoring.md  sprint-06-crossvalidator-integration.md  sprint-07-factor-interface.md  sprint-08-technical-factors.md  sprint-09-fundamental-factors.md  sprint-10-alternative-factors.md  sprint-11-factor-analysis.md  sprint-12-factor-integration.md  sprint-13-efinance.md  sprint-14-mootdx.md  sprint-15-jqdata.md  (+1 more)
scripts/: daily_update.bat  install_schedule.ps1  uninstall_schedule.ps1
tests/: __init__.py  conftest.py
(+164 files in other folders)
